# dl-hw-mfti-1

./: README.md  main.ipynb  pyproject.toml
