[tool.poetry]
name = "dl-hw-mfti-1"
version = "0.1.0"
description = ""
authors = ["anastasiyachumakova <chumana.mmrx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keras = "^3.3.3"
pandas = "^2.2.2"
numpy = "^1.26.4"
plotly = "^5.22.0"
jupyter = "^1.0.0"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
tensorflow = "^2.16.1"
loguru = "^0.7.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
